fix: route public products
