# Backend/storage/api-docs/api-docs.json
@@ -477,12 +477,7 @@
                     "404": {
                         "description": "No se encontraron productos"
                     }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
+                }
             },
             "post": {
                 "tags": [
